trybuild-qcell/src/compiletest/lcell_generativity-12.stderr
error[E0277]: `Cell<i32>` cannot be shared between threads safely
   --> src/compiletest/lcell_generativity-12.rs:13:30
    |
13  |         let handle = s.spawn(|_| owner.ro(&cell).set(200));
    |                        ----- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Cell<i32>` cannot be shared between threads safely
    |                        |
    |                        required by a bound introduced by this call
    |
    = help: the trait `Sync` is not implemented for `Cell<i32>`
    = note: required for `LCell<'_, Cell<i32>>` to implement `Sync`
    = note: required for `&LCell<'_, Cell<i32>>` to implement `Send`
note: required because it's used within this closure
   --> src/compiletest/lcell_generativity-12.rs:13:30
    |
13  |         let handle = s.spawn(|_| owner.ro(&cell).set(200));
    |                              ^^^
note: required by a bound in `crossbeam::thread::Scope::<'env>::spawn`
   --> $CARGO/crossbeam-utils-0.7.2/src/thread.rs
    |
    |         F: Send + 'env,
    |            ^^^^ required by this bound in `crossbeam::thread::Scope::<'env>::spawn`
